vayu: overlay: Advertise fingerprint on power button
Signed-off-by: David Setiawan <fryevia@foxmail.com>

--- a/rro_overlays/FrameworkResOverlayVayu/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlayVayu/res/values/config.xml
@@ -636,6 +636,9 @@
     <!-- Flashlight on power button -->
     <integer name="config_flashlightProximityTimeout">3000</integer>
 
+    <!-- Whether device has fingerprint on power button -->
+    <bool name="config_powerButtonFingerprint">true</bool>
+
     <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
     in hardware. -->
     <bool name="config_setColorTransformAccelerated">true</bool>
