vayu: treewide: start the Derpness
Signed-off-by: David Setiawan <fryevia@foxmail.com>

--- a/rro_overlays/SettingsOverlayVayu/res/values/config.xml
+++ b/rro_overlays/SettingsOverlayVayu/res/values/config.xml
@@ -23,4 +23,7 @@
 
     <!-- Device specific doze package -->
     <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
+
+    <!--DerpFest Maintainer-->
+    <string name="maintainer_name">fryevia x nullxception</string>
 </resources>
