vayu: overlay: Replace DerpFest Updater with our Support Page
Signed-off-by: David Setiawan <fryevia@foxmail.com>

--- a/rro_overlays/SettingsOverlayVayu/res/values/config.xml
+++ b/rro_overlays/SettingsOverlayVayu/res/values/config.xml
@@ -26,4 +26,8 @@
 
     <!--DerpFest Maintainer-->
     <string name="maintainer_name">fryevia x nullxception</string>
+
+    <!-- Custom Updater Activity -->
+    <string name="update_package" translatable="false">org.lineageos.settings</string>
+    <string name="update_activity" translatable="false">org.lineageos.settings.support.SupportPageActivity</string>
 </resources>
