vayu: overlay: Enable performance profile support
Signed-off-by: David Setiawan <fryevia@foxmail.com>

--- a/rro_overlays/FrameworkResOverlayVayu/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlayVayu/res/values/config.xml
@@ -777,4 +777,7 @@
 
     <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
     <bool name="config_zramWriteback">true</bool>
+
+    <!-- Whether device supports an gaming mode profiles -->
+    <bool name="config_gamingmode_performance">true</bool>
 </resources>
